--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 profile-info">
-                        <h1 class="display-5 fw-bold">Abras 1</h1>
+                        <h1 class="display-5 fw-bold">Vini 1</h1>
                         <div class="badge-container">
                             <span class="badge rounded-pill bg-primary"><i class="fas fa-code me-1"></i> Desenvolvedor</span>
                             <span class="badge rounded-pill bg-success"><i class="fas fa-database me-1"></i> DBA</span>
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="row align-items-center justify-content-center">
                     <div class="col-md-8 profile-info">
-                        <h1 class="display-5 fw-bold">Bea 2</h1>
+                        <h1 class="display-5 fw-bold">Bia 2</h1>
                         <div class="badge-container">
                             <span class="badge rounded-pill bg-primary"><i class="fas fa-code me-1"></i> Desenvolvedor</span>
                             <span class="badge rounded-pill bg-success"><i class="fas fa-database me-1"></i> DBA</span>
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 profile-info">
-                        <h1 class="display-5 fw-bold">Nome do Estudante 3</h1>
+                        <h1 class="display-5 fw-bold">Abras 3</h1>
                         <div class="badge-container">
                             <span class="badge rounded-pill bg-primary"><i class="fas fa-code me-1"></i> Desenvolvedor</span>
                             <span class="badge rounded-pill bg-success"><i class="fas fa-database me-1"></i> DBA</span>
@@ -164,7 +164,7 @@
     <footer>
         <div class="container">
             <div class="text-center mb-4">
-                <h3>Conecte-se comigo 1</h3>
+                <h3>Conecte-se comigo Vini</h3>
                 <div class="social-icons">
                     <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
                     <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="text-center mb-4">
-                <h3>Conecte-se comigo 2</h3>
+                <h3>Conecte-se comigo Bia</h3>
                 <div class="social-icons">
                     <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
                     <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="text-center mb-4">
-                <h3>Conecte-se comigo 3</h3>
+                <h3>Conecte-se comigo Abras</h3>
                 <div class="social-icons">
                     <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
                     <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
@@ -190,15 +190,15 @@
             <div class="text-center">
                 <p class="email-link">
                     <i class="fas fa-envelope me-2"></i>
-                    <a href="mailto:aluno@escola.pr.gov.br">aluno@escola.pr.gov.br</a>
+                    <a href="mailto:aluno@escola.pr.gov.br">vinicius.gomes05@escola.pr.gov.br</a>
                 </p>
                 <p class="email-link">
                     <i class="fas fa-envelope me-2"></i>
-                    <a href="mailto:aluno@escola.pr.gov.br">aluno@escola.pr.gov.br</a>
+                    <a href="mailto:aluno@escola.pr.gov.br">maria.burque.marcal@escola.pr.gov.br</a>
                 </p>
                 <p class="email-link">
                     <i class="fas fa-envelope me-2"></i>
-                    <a href="mailto:aluno@escola.pr.gov.br">aluno@escola.pr.gov.br</a>
+                    <a href="mailto:aluno@escola.pr.gov.br">abraao.santana@escola.pr.gov.br</a>
                 </p>
                 <p class="copyright">© 2025 Todos os direitos reservados.</p>
             </div>
