--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="fixed-top shadow-sm">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand fw-bold" href="#">TRIO - Abras 1 / Bea 2<br>  Vini 3</a>
+                <a class="navbar-brand fw-bold" href="#">TRIO - Abras  / Bea <br>  Vini </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
